<resources>
    <string name="app_name">NoiseApp</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="button_input_noise">Input Noise Level</string>
    <string name="button_record_voice">Record Voice</string>
    <string name="button_settings">Settings</string>

    <string name="enter_noise_level_hint">Enter Noise Level (1 to 100 dB)</string>
    <string name="submit_button_label">Submit</string>

    <string name="start_record_button_label">Start recording</string>
    <string name="stop_record_button_label">Stop recording</string>
    <string name="start_playing_button_label">Start playing</string>
    <string name="stop_playing_button_label">Stop playing</string>

    <string name="enable_notifications_label">Enable Notifications</string>
    <string name="select_language_prompt">Select Language</string>

    <string name="invalid_noise_level_message">Please enter a noise level between 1 and 100 dB</string>
    <string name="enter_noise_level_message">Please enter a noise level</string>


    <string name="recording_started_message">Recording started</string>
    <string name="failed_to_start_recording_message">Failed to start recording</string>
    <string name="recording_stopped_message">Recording stopped</string>
    <string name="failed_to_stop_recording_message">Failed to stop recording</string>
    <string name="start_playing_message">Start playing</string>
    <string name="failed_to_start_playing_message">Failed to start playing</string>
    <string name="stopped_playing_message">Stopped playing</string>
    <string name="recording_data_saved">Recording data saved</string>
    <string name="failed_to_save_recording_data">Failed to save recording data</string>


    <string name="apply_language">Apply Language</string>
    <string name="select_language">Select Language</string>

    <string name="english_language">English</string>
    <string name="french_language">French</string>
    <string name="spanish_language">Spanish</string>
    <string name="chinese_language">Chinese</string>

    <!-- Define an array of language options -->
    <string-array name="language_options">
        <item>English</item>
        <item>Spanish</item>
        <item>French</item>
        <item>Chinese</item>
        <!-- Add more language options as needed -->
    </string-array>
    <string name="japanese_language">Japanese</string>

    <string name="change_theme">Change Theme</string>

    <string name="toggle_theme">Toggle Theme</string>

    <string name="low_noise_alert">Noise levels in your area are low (0-25 dB).</string>
    <string name="medium_noise_alert">Noise levels in your area are moderate (26-50 dB).</string>
    <string name="high_noise_alert">Noise levels in your area are high (51-100 dB).</string>



    <string name="notification_channel_name">Noise Alerts</string>
    <string name="notification_channel_description">Channel for noise level alerts</string>

    <string name="exit_confirmation">Are you sure you want to exit?</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>








</resources>