<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".LanguageSelectionActivity">

    <TextView
        android:id="@+id/languageLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_language"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <RadioGroup
        android:id="@+id/languageRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/englishRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/english_language"/>

        <RadioButton
            android:id="@+id/frenchRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/french_language"/>

        <RadioButton
            android:id="@+id/spanishRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spanish_language"/>

        <RadioButton
            android:id="@+id/chineseRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chinese_language"/>

        <RadioButton
            android:id="@+id/japaneseRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/japanese_language"/>
    </RadioGroup>

    <Button
        android:id="@+id/applyLanguageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/apply_language"/>
</LinearLayout>
